--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rachael Lamore - Product Manager & UX Researcher</title>
+    <title>Rachael Lamore - User Centered Researcher adn Analyst</title>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@300;400;600&family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -389,7 +389,6 @@
                         <span class="skill-tag">Excel/Sheets</span>
                         <span class="skill-tag">R Studio</span>
                         <span class="skill-tag">Data Visualization</span>
-                        <span class="skill-tag">SQL</span>
                         <span class="skill-tag">ArcGIS</span>
                         <span class="skill-tag">ImageJ</span>
                     </div>
@@ -401,7 +400,6 @@
                         <span class="skill-tag">Cross-functional Leadership</span>
                         <span class="skill-tag">Stakeholder Communication</span>
                         <span class="skill-tag">Project Management</span>
-                        <span class="skill-tag">Bilingual (Spanish)</span>
                     </div>
                 </div>
             </div>
